# $Id$
#

EXTRA_DIST = dirac.sln \
    ./libdirac_motionest/libdirac_motionest.vcproj \
    ./DiracEncoder/libdirac_encoder/libdirac_encoder.vcproj \
    ./DiracEncoder/DiracEncoder.vcproj \
    ./InstrumentDirac/InstrumentDirac.vcproj \
    ./InstrumentDirac/libdirac_instrument/libdirac_instrument.vcproj \
    ./MakeHeader/MakeHeader.vcproj \
    ./libdirac_common/libdirac_common.vcproj \
    ./Everything/Everything.vcproj \
    ./ConversionUtils/RGBtoYUV411/RGBtoYUV411.vcproj \
    ./ConversionUtils/RGBtoYUV420/RGBtoYUV420.vcproj \
    ./ConversionUtils/RGBtoYUV422/RGBtoYUV422.vcproj \
    ./ConversionUtils/RGBtoYUV444/RGBtoYUV444.vcproj \
    ./ConversionUtils/YUV411toRGB/YUV411toRGB.vcproj \
    ./ConversionUtils/RGBtoUYVY/RGBtoUYVY.vcproj \
    ./ConversionUtils/BMPtoRGB/BMPtoRGB.vcproj \
    ./ConversionUtils/YUV420toRGB/YUV420toRGB.vcproj \
    ./ConversionUtils/YUV422toRGB/YUV422toRGB.vcproj \
    ./ConversionUtils/UYVYtoRGB/UYVYtoRGB.vcproj \
    ./ConversionUtils/ConversionUtils.vcproj \
    ./ConversionUtils/YUV444toRGB/YUV444toRGB.vcproj \
    ./ConversionUtils/RGBtoBMP/RGBtoBMP.vcproj \
    ./ConversionUtils/libconv_common/libconv_common.vcproj \
    ./DiracDecoder/DiracDecoder.vcproj \
    ./DiracDecoder/libdirac_decoder/libdirac_decoder.vcproj \
    ./EncodeDirac/EncodeDirac.vcproj \
    ./DecodeDirac/DecodeDirac.vcproj
